--- a/qlcoder/data_mining/machine_learning/pom.xml
+++ b/qlcoder/data_mining/machine_learning/pom.xml
@@ -9,4 +9,12 @@
     <version>1.0-SNAPSHOT</version>
 
 
+    <!-- https://mvnrepository.com/artifact/org.apache.mahout/mahout-core -->
+    <dependency>
+        <groupId>org.apache.mahout</groupId>
+        <artifactId>mahout-core</artifactId>
+        <version>0.7</version>
+    </dependency>
+
+
 </project>
