--- a/qlcoder/distributed_system/zookeeper_study/pom.xml
+++ b/qlcoder/distributed_system/zookeeper_study/pom.xml
@@ -24,6 +24,12 @@
             <version>3.4.5</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.apache.thrift</groupId>
+            <artifactId>libthrift</artifactId>
+            <version>0.9.3</version>
+        </dependency>
     </dependencies>
 
 
