--- a/qlcoder/algorithms_data_structures/search/cpp_robot/CMakeLists.txt
+++ b/qlcoder/algorithms_data_structures/search/cpp_robot/CMakeLists.txt
@@ -5,3 +5,15 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -O3")
 
 set(SOURCE_FILES main.cpp state_space_search.cpp state_space_search.h)
 add_executable(cpp_robot ${SOURCE_FILES})
+
+FIND_PACKAGE(OpenMP REQUIRED)
+if (OPENMP_FOUND)
+    message("OPENMP FOUND")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+endif ()
+
+find_package(Threads)
+
+target_link_libraries(cpp_robot ${CMAKE_THREAD_LIBS_INIT})
