--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ data_mining/machine_learning/target/
 distributed_system/zookeeper_study/target/
 serialization/key_redis.txt
 serialization/value_redis.txt
+machine_learning/target/
